# AirUSB

./: .gitignore  BEFORE_AND_AFTER.md  CMakeLists.txt  JOURNAL.md  QUICK_START.md  README.md  SOLUTION_SUMMARY.md  install.sh
docs/: ARCHITECTURE.md  HOW_IT_WORKS.md  README.md  USB_INTEGRATION.md
scripts/: 99-airusb.rules  airusb-server.service  check-prereqs.sh  setup-usbip-server.sh
src/: airusb-client.cpp  airusb-server.cpp  client.cpp  client.hpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp
tests/: benchmark.cpp  protocol_test.cpp  simple_test.cpp
